<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_sensor_service</name>
  <version>1.0.0</version>
  <description>QRB ROS Sensor Service</description>
  <maintainer email="quic_penwang@quicinc.com">Peng Wang</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>qrb_ros_transport</depend>
  <depend>qrb_ros_sensor_service_interfaces</depend>

  <depend>nav_msgs</depend>
  <depend>angles</depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
